src/tests/fixtures/field_definitions/ReferenceNonGraphQLType.ts.expected
-----------------
INPUT
----------------- 
type SomeUndefienedType = string;

/** @gqlType */
class Query {
  /** @gqlField */
  somePropertyField: SomeUndefienedType;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/ReferenceNonGraphQLType.ts:6:22 - error: This type is not a valid GraphQL type. Did you mean to annotate it's definition with `/** @gqlType */` or `/** @gqlScalar */`?

6   somePropertyField: SomeUndefienedType;
                       ~~~~~~~~~~~~~~~~~~
